--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<h1 id="verification_heading">Verify Your Account</h1>
   <p id="verification_subtext">
-    We emailed you the six digit code to acciojob3@gmail.com. Enter the code below to confirm your email address.
+    We emailed you the six digit code to acciojob@gmail.com. Enter the code below to confirm your email address.
   </p>
   <div class="code-container">
     <input type="text" class="code" maxlength="1" />
