--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
     We emailed you the six digit code to acciojob@gmail.com. Enter the code below to confirm your email address.
   </p>
   <div class="code-container">
-    <input type="text" class="code" maxlength="1" />
-    <input type="text" class="code" maxlength="1" />
-    <input type="text" class="code" maxlength="1" />
-    <input type="text" class="code" maxlength="1" />
-    <input type="text" class="code" maxlength="1" />
-    <input type="text" class="code" maxlength="1" />
+    <input type="text" class="code-1" maxlength="1" />
+    <input type="text" class="code-2" maxlength="1" />
+    <input type="text" class="code-3" maxlength="1" />
+    <input type="text" class="code-4" maxlength="1" />
+    <input type="text" class="code-5" maxlength="1" />
+    <input type="text" class="code-6" maxlength="1" />
   </div>
   <p class="note">
     This is design only. We don’t actually send you an email as we don’t have your email, right?
