--- a/main.html
+++ b/main.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
+	<title>Verify Your Account</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
 	<h1 id="verification_heading">Verify Your Account</h1>
-  <p id="verification_subtext">
-    We emailed you the six digit code to acciojob@gmail.com. Enter the code below to confirm your email address.
-  </p>
-  <div class="code-container">
-    <input type="text" class="code-1" maxlength="1" />
-    <input type="text" class="code-2" maxlength="1" />
-    <input type="text" class="code-3" maxlength="1" />
-    <input type="text" class="code-4" maxlength="1" />
-    <input type="text" class="code-5" maxlength="1" />
-    <input type="text" class="code-6" maxlength="1" />
-  </div>
-  <p class="note">
-    This is design only. We don’t actually send you an email as we don’t have your email, right?
-  </p>
+	<p id="verification_subtext">
+		We emailed you the six digit code to acciojob@gmail.com. Enter the code below to confirm your email address.
+	</p>
+	<div class="code-container">
+		<input type="text" class="code-1" maxlength="1" />
+		<input type="text" class="code-2" maxlength="1" />
+		<input type="text" class="code-3" maxlength="1" />
+		<input type="text" class="code-4" maxlength="1" />
+		<input type="text" class="code-5" maxlength="1" />
+		<input type="text" class="code-6" maxlength="1" />
+	</div>
+	<p class="note">
+		This is design only. We don’t actually send you an email as we don’t have your email, right?
+	</p>
 
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<script src="./script.js"></script>
 </body>
-
 </html>
